tests/baselines/reference/continueTarget5.errors.txt
continueTarget5.ts(5,7): error TS18055: Label 'target' used before declaration


==== continueTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          continue target;
          ~~~~~~~~~~~~~~~~
!!! error TS18055: Label 'target' used before declaration
        }
      }
    }